--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.2.1",
     "@nestjs/platform-express": "^9.2.1",
     "ioredis": "^5.2.6",
+    "mongodb": "^5.0.1",
     "pm2": "^5.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
