trying to fix the mess!

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rm -rfd dist && tsc",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "prestart": "npm run build",
-    "start": "pm2 start ecosystem.config.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.2.1",
     "@nestjs/core": "^9.2.1",
     "@nestjs/platform-express": "^9.2.1",
+    "devalue": "^4.3.0",
     "ioredis": "^5.2.6",
     "mongodb": "^5.0.1",
     "pm2": "^5.2.2",
